--- a/templates/list.html
+++ b/templates/list.html
@@ -64,6 +64,10 @@
             
         }
 
+        #root_crates {
+            background-color:rgba(0,0,0,.07);
+        }
+
         .container {
             max-width: 1200px;
             margin: auto;
@@ -590,6 +594,7 @@
             'crates_io_dependent': 1,
             'crates_io_last_updated': 1,
         };
+
         function calculate_risk(package_id) {
             let package_risk = analysis_result[package_id];
             let risk_score = 0;
@@ -638,40 +643,82 @@
         // function to modify the table
         //
 
-        function clean_table() {
-            document.querySelector("tbody").innerHTML = "";
-        }
-
+        // refresh the table to display `current_packages`
         function refresh_displayed_packages() {
-            // clean
-            clean_table();
+            // re-calculate current packages based on config
+            let current_packages = [];
+            if (configuration.crumbles.length == 0) { // showing main deps
+                if (configuration.show_transitive) { 
+                    Object.keys(analysis_result).forEach( (pkg_id) => {
+                        current_packages.push(pkg_id)
+                    });
+                } else {
+                    current_packages = main_dependencies;
+                }
+            } else { // showing a specific package's dependencies
+                let pkg_id = configuration.crumbles[configuration.crumbles.length - 1];
+                if (configuration.show_transitive) {
+                    current_packages = analysis_result[pkg_id]["transitive_dependencies"];
+                } else { 
+                    current_packages = analysis_result[pkg_id]["direct_dependencies"];
+                }
+            }
+            // sort table
+            if (configuration.sorted_order == "asc") {
+                current_packages.sort((a, b) => {
+                    a = analysis_result[a][configuration.sorted_by];
+                    b = analysis_result[b][configuration.sorted_by];
+                    if (Array.isArray(a)) {
+                        a = a.length;
+                        b = b.length;
+                    }
+                    return (a > b) ? 1 : -1;
+                });
+            } else {
+                current_packages.sort((a, b) => {
+                    a = analysis_result[a][configuration.sorted_by];
+                    b = analysis_result[b][configuration.sorted_by];
+                    if (Array.isArray(a)) {
+                        a = a.length;
+                        b = b.length;
+                    }
+                    return (a < b) ? 1 : -1;
+                });
+            }
+            // clean table
+            document.querySelector("tbody").innerHTML = "";
             // display
             for(package_id of current_packages) {
                 display_package(package_id);
             }
         }
 
+        // display a package in the table dynamically based on current configuration
         function display_package(package_id) {
+            // fetch analysis result for that package
             let package = analysis_result[package_id];
-            let html = "";
-            if (package.used) {
-                html += '<tr>';
-            } else {
-                html += '<tr class="not_used hide">';
+
+            // don't display the package if not used + configuration doesn't show non-used packages
+            if (!package.used && !configuration.show_not_used) {
+                return;
             }
+
+            let html = "<tr>";
             html += '<td><a href="#'+package_id+'" class="dep_name">' + package["name"] + '</a></td>';
             html += "<td>" + package["transitive_dependencies"].length + "</td>";
             html += "<td>" + package["versions"].length + "</td>";
             html += "<td>" + package["root_importers"].length + "</td>";
             html += "<td>" + package["exclusive_deps_introduced"].length + "</td>";
 
-            html += '<td class="total">' + package["total_loc"].toLocaleString() + "</td>";
-            html += '<td class="total">' + package["total_rust_loc"].toLocaleString() + "</td>";
-            html += '<td class="total">' + package["total_unsafe_loc"].toLocaleString() + "</td>";
-
-            html += '<td class="not_total hide">' + package["loc"].toLocaleString() + "</td>";
-            html += '<td class="not_total hide">' + package["rust_loc"].toLocaleString() + "</td>";
-            html += '<td class="not_total hide">' + package["unsafe_loc"].toLocaleString() + "</td>";
+            if (configuration.show_total_loc) {
+                html += '<td class="total">' + package["total_loc"].toLocaleString() + "</td>";
+                html += '<td class="total">' + package["total_rust_loc"].toLocaleString() + "</td>";
+                html += '<td class="total">' + package["total_unsafe_loc"].toLocaleString() + "</td>";
+            } else {
+                html += '<td class="not_total">' + package["loc"].toLocaleString() + "</td>";
+                html += '<td class="not_total">' + package["rust_loc"].toLocaleString() + "</td>";
+                html += '<td class="not_total">' + package["unsafe_loc"].toLocaleString() + "</td>";
+            }
 
             if (package["stargazers_count"]) {
                 html += '<td><a href="'+package["repo"]+'">' + package["stargazers_count"].toLocaleString() + "</a></td>";
@@ -706,7 +753,7 @@
         // -------
         //
 
-        function toggle_not(target) {
+        function toggle_wording(target) {
             if (target.innerHTML.slice(0,3) == "not") {
                 target.innerHTML = target.innerHTML.replace("not ", "");
             } else {
@@ -716,52 +763,41 @@
 
         // show/hide dependencies that are not part of our (target, features)
         document.querySelector("#btn_target_feature").addEventListener("click", (event) => {
-            toggle_not(event.target);
-            document.querySelectorAll(".not_used").forEach(
-                (elem) => elem.classList.toggle("hide")
-            );
+            // toggle wording of button
+            toggle_wording(event.target);
+            // reset sorting
+            reset_sort_icons();
+            // toggle config
+            configuration.show_not_used = !configuration.show_not_used;
+            // refresh display with new config
+            refresh_displayed_packages();
             //
             event.preventDefault();
         });
 
         // toggle "total" LOC 
         document.querySelector("#btn_total_loc").addEventListener("click", (event) => {
-            toggle_not(event.target);
-            document.querySelectorAll(".total, .not_total").forEach(
-                (elem) => elem.classList.toggle("hide")
-            );
+            // toggle wording of button
+            toggle_wording(event.target);
+            // reset sorting
+            reset_sort_icons();
+            // toggle config
+            configuration.show_total_loc = !configuration.show_total_loc;
+            // refresh display with new config
+            refresh_displayed_packages();
             //
             event.preventDefault();
         });
 
         // toggle direct/transitive deps
-        let transitive = false;
         document.querySelector("#btn_transitive_deps").addEventListener("click", (event) => {
-            toggle_not(event.target);
+            // toggle wording of button
+            toggle_wording(event.target);
             // reset sorting
             reset_sort_icons();
-            // TODO: caca
-            // obtain current package_id via crumble
-            if (crumble_rest.length == 0) { // main deps
-                if (!transitive) { // direct -> transitive
-                    current_packages = [];
-                    Object.keys(analysis_result).forEach( (pkg_id) => {
-                        current_packages.push(pkg_id)
-                    });
-                } else { // transitive -> direct
-                    current_packages = main_dependencies;
-                }
-            } else { // pkg_id
-                let pkg_id = crumble_rest[crumble_rest.length - 1];
-                if (!transitive) { // direct -> transitive
-                    current_packages = analysis_result[pkg_id]["transitive_dependencies"];
-                } else { // transitive -> direct
-                    current_packages = analysis_result[pkg_id]["direct_dependencies"];
-                }
-            }
-            // invert the global
-            transitive = !transitive;
-            // display new packages
+            // toggle config
+            configuration.show_transitive = !configuration.show_transitive;
+            // refresh display with new config
             refresh_displayed_packages();
             //
             event.preventDefault();
@@ -773,11 +809,10 @@
         //
 
         let crumble_home = '<a href="#home" class="dep_crumble"><i class="fas fa-home"></i> {{name}}</a>'; 
-        let crumble_rest = [];
 
         function refresh_crumble() {    
             let crumble = crumble_home;
-            for (const [idx, dep_id] of crumble_rest.entries()) {
+            for (const [idx, dep_id] of configuration.crumbles.entries()) {
                 let dep_name = analysis_result[dep_id]["name"];
                 crumble += ' <i class="fas fa-caret-right"></i> <a href="#'+idx+'" class="dep_crumble">' + dep_name + '</a>';
             }
@@ -785,7 +820,7 @@
         }
 
         function crumble_click(dep_id) {
-            crumble_rest.push(dep_id);
+            configuration.crumbles.push(dep_id);
             refresh_crumble();
         }
 
@@ -795,26 +830,16 @@
             }
             // which element in the array
             let idx = event.target.getAttribute("href").slice(1);
-            if (idx == "home") {
-                crumble_rest = [];
-                reset_info();
-                if (transitive) {
-                    current_packages = [];
-                    Object.keys(analysis_result).forEach( (pkg_id) => {
-                        current_packages.push(pkg_id)
-                    });
-                } else {
-                    current_packages = main_dependencies;
-                }
+            if (idx == "home") { // we clicked on home
+                // reset crumbles
+                configuration.crumbles = [];
+                // reset dependency info text
+                reset_dependency_info_text();
             } else {
-                let package_id = crumble_rest[idx];
-                crumble_rest = crumble_rest.slice(0, idx + 1);
-                if (transitive) {
-                    current_packages = analysis_result[package_id]["transitive_dependencies"];
-                } else {
-                    current_packages = analysis_result[package_id]["direct_dependencies"];
-                }
+                let package_id = configuration.crumbles[idx];
+                configuration.crumbles = configuration.crumbles.slice(0, idx + 1);
             }
+            // refresh displayed packages
             refresh_displayed_packages();
             // refresh crumble
             refresh_crumble();
@@ -825,6 +850,17 @@
         //
         // init
         // ----
+
+        // setup a config 
+        // TODO: persist this in real time via URL
+        let configuration = {
+            show_not_used: false,
+            show_total_loc: false,
+            show_transitive: false,
+            sorted_by: "name",
+            sorted_asc: true,
+            crumbles: []
+        };
 
         // obtain result and parse JSON
         let {root_crates, main_dependencies, analysis_result} = JSON.parse(atob("{{ json_result }}"));
@@ -838,12 +874,11 @@
         let root_crates_with_comma = root_crates.reduce( (acc, pkg_name) => acc + ", " + pkg_name);
         document.querySelector("#root_crates").innerHTML = root_crates_with_comma;
 
-        // display main dependencies
-        let current_packages = main_dependencies;
-        refresh_displayed_packages();
-
         // display crumble
         refresh_crumble();
+
+        // display main dependencies
+        refresh_displayed_packages();
 
         //
         // clicking on dependencies
@@ -876,7 +911,7 @@
             }
         }
 
-        function reset_info() {
+        function reset_dependency_info_text() {
             document.querySelector("#description").innerHTML = "";
             document.querySelector("#root_importers").innerHTML = "";
             document.querySelector("#exclusive_deps_introduced").innerHTML = "";
@@ -890,18 +925,14 @@
             // get info
             let package_name = event.target.innerHTML; // necessary for main deps
             let package_id = event.target.getAttribute("href").slice(1);
-            // refresh
+            // refresh sorting
             reset_sort_icons();
+            // add to crumbles
             crumble_click(package_id);
             // display info about the dependency
             let package_info = analysis_result[package_id];
             update_info(package_info)
             // display new packages
-            if (transitive) {
-                current_packages = package_info["transitive_dependencies"];
-            } else {
-                current_packages = package_info["direct_dependencies"];
-            }
             refresh_displayed_packages();
             //
             event.preventDefault();
@@ -923,39 +954,23 @@
         function sort_click(event) {
             // get info
             let to_sort = event.target.getAttribute("href").slice(1); // get rid of "#..."
-            // figure out how to sort
-            let sort_asc = false;
-            let thing = event.target.querySelector("svg");
-            if (thing && thing.classList.contains("fa-sort-down")) {
-                sort_asc = true;
+            // set new configuration
+            if (configuration.sorted_by == to_sort) {
+                // if we already sorted with this column, invert it
+                configuration.sorted_asc = !configuration.sorted_asc;
+            } else {
+                configuration.sorted_by = to_sort;
+                configuration.sorted_asc = false; // by default sort by DESC order
             }
             // reset sort icons
             reset_sort_icons();
             // sort and update sort icon
-            if (sort_asc) {
-                event.target.innerHTML += '<i class="fas fa-sort-up"></i>';
-                current_packages.sort((a, b) => {
-                    a = analysis_result[a][to_sort];
-                    b = analysis_result[b][to_sort];
-                    if (Array.isArray(a)) {
-                        a = a.length;
-                        b = b.length;
-                    }
-                    return (a > b) ? 1 : -1;
-                });
+            if (configuration.sorted_asc) {
+                event.target.innerHTML += '<i class="fas fa-sort-up"></i>';   
             } else {
                 event.target.innerHTML += '<i class="fas fa-sort-down"></i>';
-                current_packages.sort((a, b) => {
-                    a = analysis_result[a][to_sort];
-                    b = analysis_result[b][to_sort];
-                    if (Array.isArray(a)) {
-                        a = a.length;
-                        b = b.length;
-                    }
-                    return (a < b) ? 1 : -1;
-                });
             }
-            // refresh table
+            // refresh table with new configuration
             refresh_displayed_packages();
             //
             event.preventDefault();
