[fix] internal dep not showed by default

--- a/templates/list.html
+++ b/templates/list.html
@@ -897,7 +897,7 @@
             show_not_used: false,
             show_total_loc: false,
             show_transitive: false,
-            show_internal: true,
+            show_internal: false,
             sorted_by: "name",
             sorted_asc: true,
             crumbles: []
